Fixes navigation on tablet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -351,6 +351,7 @@ hr.line {
 
 .header-sub .extendednavigation {
 	min-height: 49px;
+	min-width: 18px;
 	display: table-cell;
 }
 
@@ -416,7 +417,7 @@ hr.line {
 	width: 30px;
 	height: 30px;
 	top: 10px;
-	right: 18px;
+	left: 18px;
 	&:after {
 		background-color: @color-swatch2;
 		box-shadow: 0 6px 0 @color-swatch2, 0 12px 0 @color-swatch2;
